--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^4.0.0",
     "es6-promise": "^4.2.5",
     "express": "^4.16.3",
+    "forcedomain": "^1.0.0",
     "history": "^4.7.2",
     "hsts": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
