--- a/.ebignore
+++ b/.ebignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
@@ -19,9 +17,10 @@ yarn-error.log*
 
 package-lock\.json
 
-
 .idea/
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+.bin/
