--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "latlon-geohash": "^1.1.0",
     "net": "^1.0.2",
     "ngeohash": "^0.6.0",
+    "npm-run-all": "^4.1.3",
     "piwik-react-router": "^0.12.1",
     "pop-shared": "^0.2.0",
     "prop-types": "^15.6.1",
@@ -41,11 +42,16 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "tls": "^0.0.1",
     "url-search-params-polyfill": "^3.0.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "start": "node src/server/index.js",
-    "dev": "webpack-dev-server --config webpack.dev.config.js --open",
+    "start": "node ./build/index.js",
+    
+    "dev:build-server": "webpack --env.NODE_ENV=development --config webpack.server.js --mode=development -w",
+    "dev:start": "nodemon ./build/index.js",
+
+    "dev": "npm-run-all --parallel dev:*",
     "build:prod": "webpack --env.production --env.NODE_ENV=production",
     "build:staging": "webpack --env.staging --env.NODE_ENV=staging",
     "deploy:prod": "yarn && yarn build:prod && eb deploy pop-consultation --profil POP",
