--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ workflows:
           filters:
             branches:
               only: master
-      - deploy_prod:
+      - deploy_eb_prod:
           requires:
             - build_prod
           filters:
