--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "history": "^4.7.2",
     "hsts": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-style-loader": "^4.0.0",
     "latlon-geohash": "^1.1.0",
     "net": "^1.0.2",
     "ngeohash": "^0.6.0",
     "npm-run-all": "^4.1.3",
     "piwik-react-router": "^0.12.1",
     "pop-shared": "^0.2.0",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.1",
     "query-string": "5",
     "react": "^16.5.0",
@@ -47,10 +49,8 @@
   },
   "scripts": {
     "start": "node ./build/index.js",
-    
     "dev:build-server": "webpack --env.NODE_ENV=development --config webpack.server.js --mode=development -w",
     "dev:start": "nodemon ./build/index.js",
-
     "dev": "npm-run-all --parallel dev:*",
     "build:prod": "webpack --env.production --env.NODE_ENV=production",
     "build:staging": "webpack --env.staging --env.NODE_ENV=staging",
