--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@appbaseio/reactivemaps": "^2.0.1",
     "@appbaseio/reactivesearch": "^2.10.3",
+    "autoprefixer": "^9.3.1",
     "bootstrap": "^4.0.0",
     "brace": "^0.11.1",
     "classnames": "^2.2.5",
@@ -14,11 +15,15 @@
     "history": "^4.7.2",
     "hsts": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-style-loader": "^4.0.0",
     "latlon-geohash": "^1.1.0",
     "net": "^1.0.2",
     "ngeohash": "^0.6.0",
+    "npm-run-all": "^4.1.3",
     "piwik-react-router": "^0.12.1",
     "pop-shared": "^0.2.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.1",
     "query-string": "5",
     "react": "^16.5.0",
@@ -41,7 +46,8 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "tls": "^0.0.1",
     "url-search-params-polyfill": "^3.0.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "start": "node src/server/index.js",
