--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "start": "node ./build/index.js",
     "dev:build-server": "webpack --env.NODE_ENV=development --config webpack.server.js --mode=development -w",
-    "dev:start": "nodemon ./build/index.js",
+    "dev:start": "node ./build/index.js",
     "dev": "npm-run-all --parallel dev:*",
     "build:prod": "webpack --env.production --env.NODE_ENV=production",
     "build:staging": "webpack --env.staging --env.NODE_ENV=staging",
