--- a/package.json
+++ b/package.json
@@ -66,10 +66,12 @@
       "enzyme-to-json/serializer"
     ],
     "testPathIgnorePatterns": [
-      "./src/__tests__/setup/"
+      "./src/__tests__/setup/",
+      "./src/__tests__/__mocks__/"
     ],
     "moduleNameMapper": {
-      "^.+\\.(css|scss|png|jpg|scvg|jpeg)$": "identity-obj-proxy"
+      "^.+\\.(css|scss|png|jpg|scvg|jpeg)$": "identity-obj-proxy",
+      "isomorphic-style-loader/lib/withStyles": "<rootDir>/src/__tests__/__mocks__/withStyles.js"
     }
   },
   "engines": {
