--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "latlon-geohash": "^1.1.0",
     "net": "^1.0.2",
     "ngeohash": "^0.6.0",
+    "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.3",
     "piwik-react-router": "^0.12.1",
     "pop-shared": "^0.3.0",
@@ -51,9 +52,12 @@
   },
   "scripts": {
     "start": "node ./build/index.js",
-    "dev:build-server": "webpack --env.NODE_ENV=development --config webpack.server.js --mode=development -w",
-    "dev:start": "node ./build/index.js",
-    "dev": "npm-run-all --parallel dev:*",
+    "dev:build": "webpack --config webpack.dev.config.js -w",
+    "dev:build-server": "webpack --config webpack.server.js --mode=development -w",
+    "dev:start": "nodemon ./build/index.js",
+    "dev": "yarn build:dev && yarn build:server && npm-run-all --parallel dev:*",
+    "build:server": "webpack --config webpack.server.js --mode=development",
+    "build:dev": "webpack --config webpack.dev.config.js",
     "build:prod": "webpack --env.production --env.NODE_ENV=production",
     "build:staging": "webpack --env.staging --env.NODE_ENV=staging",
     "deploy:prod": "yarn && yarn build:prod && eb deploy pop-consultation --profil POP",
