add more tests ("real" joconde document)

--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     ],
     "testPathIgnorePatterns": [
       "./src/__tests__/setup/",
-      "./src/__tests__/__mocks__/"
+      "./src/__tests__/__mocks__/",
+      "./src/__tests__/__notices__/"
     ],
     "moduleNameMapper": {
       "^.+\\.(css|scss|png|jpg|scvg|jpeg)$": "identity-obj-proxy",
