--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ngeohash": "^0.6.0",
     "npm-run-all": "^4.1.3",
     "piwik-react-router": "^0.12.1",
-    "pop-shared": "^0.5.6",
+    "pop-shared": "0.6.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.1",
